--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <title>Number Guesser</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Number Guesser</h1>
+    <div id="game">
+      
+    </div>
+  </div>
 </body>
 </html>
